---
source: crates/control/tests/it/connector_images.rs
assertion_line: 266
expression: redactor.response_json(response).await.unwrap()

---
{
  "data": {
    "attributes": {
      "bindings": [
        {
          "documentSchema": {
            "properties": {
              "count": {
                "type": "integer"
              },
              "message": {
                "type": "string"
              }
            },
            "required": [
              "count",
              "message"
            ],
            "type": "object"
          },
          "keyPtrs": [
            "/count"
          ],
          "recommendedName": "greetings",
          "resourceSpec": {
            "stream": "greetings",
            "syncMode": "incremental"
          }
        }
      ]
    },
    "id": "[nonce]",
    "links": {
      "image": "http://127.0.0.1:0/connector_images/[i1]"
    },
    "type": "discovered_bindings"
  }
}
